Implemented ingredient search

--- a/src/app/modules/recipes-search/ingredients-menu/ingredients-menu.component.html
+++ b/src/app/modules/recipes-search/ingredients-menu/ingredients-menu.component.html
@@ -3,7 +3,7 @@
     <h1>Cooky</h1>
     <mat-form-field class="search-field" hideRequiredMarker>
       <mat-label>Search Ingredients</mat-label>
-      <input matInput type="text"/>
+      <input matInput type="text" [(ngModel)]="searchToken"/>
       <button id="search-button" matSuffix mat-icon-button>
         <mat-icon>search</mat-icon>
       </button>
@@ -11,10 +11,11 @@
   </div>
   <div id="categories">
     <div class="category" *ngFor="let category of categories; let i = index;">
-      <h2>{{categoriesNames[i]}}</h2>
+      <h2 *ngIf="categoryContainsToken(category)" >{{categoriesNames[i]}}</h2>
       <div class="ingredients-container">
         <a class="ingredients d-flex flex-row align-items-center" *ngFor="let ingredient of category"
-           [ngClass]="{'selected-ingredient': inPantry(ingredient)}">
+           [ngClass]="{'selected-ingredient': inPantry(ingredient),
+            'filtered-ingredients': !containsSearchToken(ingredient)}">
           <button class="exclude add-exclude" title="Exclude" (click)="add(ingredient, true)"
                   [ngClass]="{'selected-ingredient-button': inPantry(ingredient)}">
             <mat-icon>remove</mat-icon>
