Recipe cards overview and recipe search by title implemented

--- a/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.html
+++ b/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.html
@@ -19,5 +19,12 @@
       </a>
     </div>
   </div>
-  <div id="recipes"></div>
+  <div id="recipes">
+    <div *ngFor="let recipe of recipes" class="recipe" [ngClass]="{'not-selected': !titleContainsToken(recipe.title)}">
+      <img src="assets/recipe-images/chicken_pasta.jpg">
+      <div class="recipe-title">
+        <h2>{{recipe.title}}</h2>
+      </div>
+    </div>
+  </div>
 </div>
