--- a/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
+++ b/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
@@ -87,3 +87,63 @@
   border-radius: 5px;
   background: #FFA012;
 }
+
+.recipe{
+  background-color: #303030;
+  width: 400px;
+  height: 250px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.recipe:hover{
+  cursor: grab;
+  scale: 103%;
+  transition: 0.5s;
+}
+
+.recipe img {
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+}
+
+.recipe-title{
+  height:30%;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+
+.recipe h2{
+  color: white;
+  font-size: 24px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: center;
+  width: 100%;
+  margin: 0;
+}
+
+#recipes{
+  padding: 10px 20px 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  row-gap: 30px;
+  height: 55vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+#recipes::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 4px;
+  background: #222831;
+}
+
+
+
+
