--- a/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.html
+++ b/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.html
@@ -22,8 +22,12 @@
   <div id="recipes">
     <div *ngFor="let recipe of recipes" class="recipe" [ngClass]="{'not-selected': !titleContainsToken(recipe.title)}">
       <img src="assets/recipe-images/chicken_pasta.jpg">
+      <div class="prep-time">
+        <mat-icon>access_time</mat-icon>
+        <p>{{recipe.preparationTime}} min</p>
+      </div>
       <div class="recipe-title">
-        <h2>{{recipe.title}}</h2>
+        <h2 title="{{recipe.title}}">{{recipe.title}}</h2>
       </div>
     </div>
   </div>
