--- a/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
+++ b/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
@@ -94,6 +94,7 @@
   height: 250px;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
 }
 
 .recipe:hover{
@@ -106,6 +107,25 @@
   width: 100%;
   height: 70%;
   object-fit: cover;
+}
+
+.prep-time {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 100px;
+  height: 30px;
+  background-color: #FFA012;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 5px;
+  padding: 5px;
+  gap: 5px;
+}
+
+.prep-time p {
+  margin: 0;
 }
 
 .recipe-title{
@@ -133,7 +153,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   row-gap: 30px;
-  height: 55vh;
+  height: 52vh;
   overflow-x: hidden;
   overflow-y: auto;
 }
