--- a/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.html
+++ b/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.html
@@ -21,10 +21,10 @@
   </div>
   <div id="recipes">
     <div *ngFor="let recipe of recipes" class="recipe" [ngClass]="{'not-selected': !titleContainsToken(recipe.title)}">
-      <img src="assets/recipe-images/chicken_pasta.jpg">
+      <img alt="assets/recipe-images/chicken_pasta.jpg" [src]="recipe.image">
       <div class="prep-time">
         <mat-icon>access_time</mat-icon>
-        <p>{{recipe.preparationTime}} min</p>
+        <p>{{recipe.readyInMinutes}} min</p>
       </div>
       <div class="recipe-title">
         <h2 title="{{recipe.title}}">{{recipe.title}}</h2>
