Finished recipes details card

--- a/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
+++ b/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
@@ -39,9 +39,10 @@
 }
 
 ::ng-deep .mat-dialog-container{
-  width: 40% !important;
+  width: 70vw !important;
   padding: 0 !important;
   margin: 0 auto !important;
+  border-radius: 10px !important;
 }
 
 #cuisine-meal-type-filters{
