--- a/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
+++ b/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
@@ -165,6 +165,33 @@
   background: #222831;
 }
 
+@media only screen and (min-width: 992px) {
 
+  .cuisine-meal-button {
+    font-size: 16px;
+    width: 80px;
+    padding: 0 15px;
+  }
+
+  .search-field {
+    font-size: 16px;
+  }
+
+  .filter-item{
+    padding: 5px 10px;
+    font-size: 16px;
+  }
+
+  .filter-item img{
+    width: 20px;
+    height: 20px;
+  }
+
+}
+
+@media only screen and (min-width: 600px) {
+  
+
+}
 
 
