--- a/src/app/modules/recipes-search/cuisines-selection/cuisines-selection.component.css
+++ b/src/app/modules/recipes-search/cuisines-selection/cuisines-selection.component.css
@@ -2,6 +2,9 @@
   width: 100%;
   padding: 20px;
   background-color: #303030;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 90vh;
 }
 
 #cuisines-container{
@@ -50,4 +53,16 @@
   width: 120px;
   padding: 5px 20px;
   margin-top: 7px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 5px;
+  border-radius: 4px;
+  background: #222831;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: #FFA012;
 }
