--- a/src/app/modules/recipes-search/ingredients-menu/ingredients-menu.component.css
+++ b/src/app/modules/recipes-search/ingredients-menu/ingredients-menu.component.css
@@ -116,6 +116,18 @@
   display: none !important;
 }
 
+.menu-button{
+  display: none;
+}
+
+.hide-menu {
+  display: block;
+}
+
+.show-menu {
+  display: block;
+}
+
 @media only screen and (min-width: 992px) {
 
   .ingredients-container a {
@@ -129,10 +141,33 @@
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
   #ingredient-menu {
     width: 100vw;
-    height: 40vh;
+    height: calc(100vh - 50px);
+  }
+
+  .hide-menu {
+    display: none;
+  }
+
+  .show-menu {
+    display: block;
+  }
+
+  .menu-button {
+    display: block;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    background-color: #FFA012;
+    color: #303030;
+    width: 100%;
+    height: 50px;
+    font-size: 24px;
+    text-align: center;
+    line-height: 50px;
+    cursor: pointer;
   }
 }
 
