--- a/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
+++ b/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.css
@@ -189,8 +189,38 @@
 
 }
 
-@media only screen and (min-width: 600px) {
-  
+@media only screen and (max-width: 900px) {
+  ::ng-deep .mat-dialog-container{
+    width: 150% !important;
+  }
+
+  #recipes-overview{
+    height: 100vh;
+    padding-bottom: 0;
+  }
+
+  #recipes{
+    overflow: visible;
+  }
+
+  #cuisine-meal-type{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #cuisine-meal-type-filters{
+    overflow: visible;
+    flex-wrap: wrap;
+  }
+  .search-field{
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .filter-buttons-container{
+    width: 80%;
+    justify-content: center;
+  }
 
 }
 
