--- a/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.html
+++ b/src/app/modules/recipes-search/recipes-overview/recipes-overview.component.html
@@ -7,8 +7,10 @@
         <mat-icon>search</mat-icon>
       </button>
     </mat-form-field>
-    <button class="cuisine-meal-button" mat-button (click)="chooseCuisine()">Cuisines</button>
-    <button class="cuisine-meal-button" mat-button (click)="chooseMealType()">Meal Type</button>
+    <div class="d-flex flex-row gap-5 filter-buttons-container">
+      <button class="cuisine-meal-button" mat-button (click)="chooseCuisine()">Cuisines</button>
+      <button class="cuisine-meal-button" mat-button (click)="chooseMealType()">Meal Type</button>
+    </div>
     <div id="cuisine-meal-type-filters">
       <a *ngFor="let cuisine of selectedCuisines" class="filter-item" [ngClass]="{'not-selected': !cuisine.selected}">
         <img src="assets/cuisine-images/{{cuisine.name}}.png" alt="favicon.ico">
