--- a/src/app/modules/recipes-search/cuisines-selection/cuisines-selection.component.css
+++ b/src/app/modules/recipes-search/cuisines-selection/cuisines-selection.component.css
@@ -16,6 +16,8 @@
 
 #cuisines-container img{
   width: 20px;
+  border-radius: 50%;
+  border: 1px solid #303030;
 }
 
 .cuisine-item{
@@ -26,6 +28,7 @@
   padding: 5px 10px;
   border-radius: 10px;
   font-size: 18px;
+  box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.6);
 }
 
 #apply-close-container{
@@ -53,6 +56,7 @@
   width: 120px;
   padding: 5px 20px;
   margin-top: 7px;
+  box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.6);
 }
 
 ::-webkit-scrollbar {
